alteraçãoe de busca dos itens no pedido